--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,6 @@ import Layout from "../layouts/Layout.astro";
 	<main>
 		<h1>Runnaway</h1>
 		<p>Improve your running skills by tracking and planning your runs</p>
-		<img src="woman-runnig.jpg" alt="">
+		<img src="woman-running.jpg" alt="">
 	</main>
 </Layout>
