feat: adds client side form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Form from "../components/form";
 		</header>
 		<section class="h-screen font-mono " id="get-started">
 			<h2 class="text-3xl py-14 text-center" >Fill with your latest runs</h2>
-			<Form />
+			<Form client:load />
 		</section>
 	</main>
 </Layout>
