--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import FormAndVisualizer from "../components/formAndVisualizer";
 <Layout title="Welcome to Astro.">
 	<main>
 		<header
-			class="bg-woman-runnig bg-cover h-screen w-screen max-w-full px-96 py-48 text-white font-mono"
+			class="bg-woman-runnig bg-cover h-screen w-screen max-w-full p-16 lg:px-96 lg:py-48 text-white font-mono"
 		>
 			<h1 class="text-6xl">Runnaway</h1>
 			<p class="text-3xl py-4 w-3/4">
