feat: functional set goal run

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,6 @@ import SetGoalRun from "../components/setGoalRun";
 			</a>
 		</header>
 		<FormAndVisualizer client:load />
-		<SetGoalRun />
+		<SetGoalRun client:load />
 	</main>
 </Layout>
