feat: adds tittle and fav icon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import FormAndVisualizer from "../components/formAndVisualizer";
 import SetGoalRun from "../components/setGoalRun";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Runaway">
 	<main>
 		<header
 			class="bg-woman-runnig bg-black bg-cover h-screen w-screen max-w-full p-16 lg:px-96 lg:py-48 text-white font-mono"
